--- a/app/static/lab02_resume.html
+++ b/app/static/lab02_resume.html
@@ -5,26 +5,33 @@ Suphakit Ng (Tomu)
 lab02 204212 sec002 -->
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="static/css/resume.css">
+  <link rel="stylesheet" href="static/css/home.css">
   <title>Eden's site</title>
 </head>
 <body>
 <header>
-
+  <img src="static/img/cmu-logo.png" class="logo">
   <nav class="navbar">
-    <div class="container">
-      <img src="static/img/cmu-logo.png" class="logo">
-    </div>
-    <ul>
-      <input type="checkbox" id="menu-bar">
-      <label for="menu-bar">Menu</label>
+    <ul class="navigation">
       <li><a href="#" class="active">Home</a></li>
-      <li><a href="#">About</a></li>
+      <li><a href="static/about.html">About Me</a></li>
       <li><a href="#">Work</a></li>
       <li><a href="#">Contact</a></li>
     </ul>
+    <div class="search">
+      <span class="icon">
+        <ion-icon name="search-outline" class="searchBtn"></ion-icon>
+        <ion-icon name="close-outline" class="closeBtn"></ion-icon>
+      </span>
+    </div>
+    <ion-icon name="menu-outline" class="menuToggle"></ion-icon>
   </nav>
+  <div class="searchBox">
+    <input type="text" placeholder="Search here . . .">
+  </div>
 </header>
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
   <section>
     <img src="static/img/stars.png" id="stars">
     <img src="static/img/moon.png" id="moon">
@@ -46,9 +53,9 @@ lab02 204212 sec002 -->
     let stars = document.getElementById('stars');
     let moon = document.getElementById('moon');
     let landscape = document.getElementById('landscape');
-    let text = document.getElementById('text')
-    let btn = document.getElementById('btn')
-    let header = document.querySelector('header')
+    let text = document.getElementById('text');
+    let btn = document.getElementById('btn');
+    let header = document.querySelector('header');
 
     window.addEventListener('scroll', function(){
       let value = window.scrollY;
@@ -59,6 +66,34 @@ lab02 204212 sec002 -->
       btn.style.marginBottom = value * 1.5 + 'px';
       header.style.top = value * 0.5 + 'px';
     })
+  </script>
+  <script>
+    let navigation = document.querySelector('.navigation');
+    let menuToggle = document.querySelector('.menuToggle');
+    let search = document.querySelector('.search');
+    let searchBox = document.querySelector('.searchBox');
+    let searchBtn = document.querySelector('.searchBtn');
+    let closeBtn = document.querySelector('.closeBtn');
+    
+    searchBtn.onclick = function(){
+      searchBox.classList.add('active');
+      closeBtn.classList.add('active');
+      searchBtn.classList.add('active');
+      menuToggle.classList.add('hide');
+      header.classList.remove('open');
+    }
+    closeBtn.onclick = function(){
+      searchBtn.classList.remove('active');
+      closeBtn.classList.remove('active');
+      searchBox.classList.remove('active');
+      menuToggle.classList.remove('hide');
+    }
+    menuToggle.onclick = function(){
+      header.classList.toggle('open');
+      searchBtn.classList.remove('active');
+      closeBtn.classList.remove('active');
+      searchBox.classList.remove('active');
+    }
   </script>
 </body>
 </html>
