--- a/app/static/lab02_resume.html
+++ b/app/static/lab02_resume.html
@@ -5,95 +5,221 @@ Suphakit Ng (Tomu)
 lab02 204212 sec002 -->
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="static/css/home.css">
-  <title>Eden's site</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="static/plugins/headline/headline.css">
+  <link rel="stylesheet" href=" https://unicons.iconscout.com/release/v2.1.0/css/unicons.css ">
+  <link rel="stylesheet" href="static/css/resume.css"/>
+  <link rel="shortcut icon" href="static/img/profil1.png">
+  <title>Resume</title>
 </head>
 <body>
-<header>
-  <img src="static/img/cmu-logo.png" class="logo">
-  <nav class="navbar">
-    <ul class="navigation">
-      <li><a href="#" class="active">Home</a></li>
-      <li><a href="static/about.html">About Me</a></li>
-      <li><a href="#">Work</a></li>
-      <li><a href="#">Contact</a></li>
-    </ul>
-    <div class="search">
-      <span class="icon">
-        <ion-icon name="search-outline" class="searchBtn"></ion-icon>
-        <ion-icon name="close-outline" class="closeBtn"></ion-icon>
-      </span>
+  <nav>
+    <div class="container inner">
+      <div class="logo">
+        <i class="uil uil-snowflake"></i> 
+        Resume
+      </div>
+      <div>
+        <button>
+          <i class="uil uil-print"></i>
+          Print
+        </button>
+      </div>
     </div>
-    <ion-icon name="menu-outline" class="menuToggle"></ion-icon>
   </nav>
-  <div class="searchBox">
-    <input type="text" placeholder="Search here . . .">
-  </div>
-</header>
-<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-  <section>
-    <img src="static/img/stars.png" id="stars">
-    <img src="static/img/moon.png" id="moon">
-    <h2 id="text">Lion Ng</h2>
-    <a href="#" id="btn">Explore</a>
-    <img src="static/img/landscape.png" id="landscape">
-  </section>
-  <div class="sec" id="sec">
-    <h2>Short Story</h2>
-    <p>Some time ago, a man punished his 3-year-old daughter for wasting a roll of gold wrapping paper. Money was tight and he became infuriated when the child tried to decorate a box to put under the Christmas tree.
-    Nevertheless, the little girl brought the gift to her father the next morning and said, “This is for you, Daddy.”
-    The man became embarrassed by his overreaction earlier, but his rage continue when he saw that the box was empty. He yelled at her; “Don’t you know, when you give someone a present, there is supposed to be something inside?”
-    The little girl looked up at him with tears in her eyes and cried.<br><br>“Oh.. Daddy, it’s not empty at all. I blew kisses into the box.... They’re all for you, Daddy....”<br><br>
-    The father was crushed. He put his arms around his little girl, and he begged for her forgiveness.<br><br>Only a short time later, an accident took the life of the child.
-    Her father kept the gold box by his bed for many years and, whenever he was discouraged, he would take out an imaginary kiss and remember the love of the child who had put it there.</p>
-  </div>
+  
+  <main class="container">
+    <section class="profile" id="profile_ripples">
+      <div class="left">
+        <div class="avatar_block">
+          <img src="static/img/Profil1noback.png" alt="">
+          <span>
+            <i class="uil uil-comment-dots"></i>
+          </span>
+        </div>
+        <div>
+          <h2>Lion Ng</h2>
+          <p class="cd-headline loading-bar">
+            <span class="cd-words-wrapper">
+              <b class="is-visible">Computer Science</b>
+              <b>CMU</b>
+            </span>
+          </p>
+        </div>
+      </div>
+      <div class="right">
+        <ul class="contact">
+          <li>
+            <i class="uil uil-phone-volume"></i>
+            <strong>Phone : </strong> +66 871819369
+          </li>
+          <li>
+            <i class="uil uil-envelope"></i>
+            <strong>Email :</strong> lion2545.ng@gmail.com
+          </li>
+        </ul>
+        <ul class="socials">
+          <li>
+            <a href="https://www.facebook.com/superkids.ng.33/" target="_blank">
+              <i class="uil uil-facebook"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://www.youtube.com/channel/UCLesLVYYmMYF7YRoCQl45cA" target="_blank">
+              <i class="uil uil-youtube"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/lionel_ng1/" target="_blank">
+              <i class="uil uil-instagram"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://github.com/Tomu1572" target="_blank">
+              <i class="uil uil-github"></i>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section class="about">
+      <h1 class="section_heading">About Me</h1>
+      <div class="content">
+        <div class="left">
+          <h2>I'm Lion Ng</h2>
+          <p>Currently, I'm a student at Chiang mai University. I strive for knowledge that piqued my interest, occasional purveyor of wisdom and also, coincidentally, a programmer.
+            My school of thought is reliant on schooling my thoughts thoroughly, regularly; keeping abreast of design, ideas, trends and solutions.</p>
+            <button><span>Download CV</span></button>
+        </div>
+        <div class="right">
+          <p>
+            <span>Name</span>
+            <span>Lion Ng</span>
+          </p>
+          <p>
+            <span>Date of birth</span>
+            <span>04 July 2002</span>
+          </p>
+          <p>
+            <span>Spoken Language</span>
+            <span>English - Thai</span>
+          </p>
+          <p>
+            <span>Nationality - Race</span>
+            <span>Thai - Singaporean</span>
+          </p>
+          <p>
+            <span>Interest</span>
+            <span>Music, Language, Travel</span>
+          </p>
+        </div>
+      </div>
+    </section>
 
-  <script>
-    let stars = document.getElementById('stars');
-    let moon = document.getElementById('moon');
-    let landscape = document.getElementById('landscape');
-    let text = document.getElementById('text');
-    let btn = document.getElementById('btn');
-    let header = document.querySelector('header');
-
-    window.addEventListener('scroll', function(){
-      let value = window.scrollY;
-      stars.style.left = value * 0.2 + 'px';
-      moon.style.top = value * 0.85 + 'px';
-      landscape.style.top = value * 0 + 'px';
-      text.style.marginBottom = value * 1.5 + 'px';
-      btn.style.marginBottom = value * 1.5 + 'px';
-      header.style.top = value * 0.5 + 'px';
-    })
-  </script>
-  <script>
-    let navigation = document.querySelector('.navigation');
-    let menuToggle = document.querySelector('.menuToggle');
-    let search = document.querySelector('.search');
-    let searchBox = document.querySelector('.searchBox');
-    let searchBtn = document.querySelector('.searchBtn');
-    let closeBtn = document.querySelector('.closeBtn');
-    
-    searchBtn.onclick = function(){
-      searchBox.classList.add('active');
-      closeBtn.classList.add('active');
-      searchBtn.classList.add('active');
-      menuToggle.classList.add('hide');
-      header.classList.remove('open');
-    }
-    closeBtn.onclick = function(){
-      searchBtn.classList.remove('active');
-      closeBtn.classList.remove('active');
-      searchBox.classList.remove('active');
-      menuToggle.classList.remove('hide');
-    }
-    menuToggle.onclick = function(){
-      header.classList.toggle('open');
-      searchBtn.classList.remove('active');
-      closeBtn.classList.remove('active');
-      searchBox.classList.remove('active');
-    }
-  </script>
+    <section class="skills">
+      <h1 class="section_heading">Education & Skills</h1>
+      <div class="content">
+        <div class="left">
+          <div class="inner_left">
+            <div class="heading">
+              <i class="uil uil-graduation-cap"></i>
+              <h5>Education</h5>
+            </div>
+            <div class="timeline_wrapper">
+              <div class="item">
+                <p>2008 - 2014</p>
+                <p class="center">Prepschool</p>
+                <p>Primary Education</p>
+              </div>
+              <div class="item">
+                <p>2014 - 2020</p>
+                <p class="center">Highschool</p>
+                <p>Secondary Education</p>
+              </div>
+              <div class="item">
+                <p>2020 - Present</p>
+                <p class="center">University</p>
+                <p>Bachelor of Computer Science</p>
+              </div>
+            </div>
+          </div>
+          <div class="inner_right">
+            <div class="heading">
+              <i class="uil uil-suitcase-alt"></i>
+              <h5>Experience</h5>
+            </div>
+            <div class="timeline_wrapper">
+              <div class="item">
+                <p>2018 - 2019</p>
+                <p class="center">Video Editor</p>
+                <p>Dell co.</p>
+              </div>
+              <div class="item">
+                <p>2019 - 2020</p>
+                <p class="center">Drone's flying & 3D Printing</p>
+                <p>Providence University</p>
+              </div>
+              <div class="item">
+                <p>2021 - 2022</p>
+                <p class="center">Bartending</p>
+                <p>Snack & Bars</p>
+              </div>
+            </div>
+            </div>
+          </div>
+        <div class="right">
+          <div class="inner_left">
+            <div class="heading">
+              <i class="uil uil-university"></i>
+              <h5>Midterm Exam's</h5>
+            </div>
+            <div class="schedule_wrapper">
+              <div class="item">
+                <p>204232</p>
+                <p class="center">12:00-15:00</p>
+                <p>26th January</p>
+              </div>
+              <div class="item">
+                <p>204382</p>
+                <p class="center">15:30-18:30</p>
+                <p>27th January</p>
+              </div>
+              <div class="item">
+                <p>201111</p>
+                <p class="center">12:00-15:00</p>
+                <p>28th January</p>
+              </div>
+            </div>
+          </div>
+          <div class="inner_right">
+            <div class="heading">
+              <i class="uil uil-schedule"></i>
+              <h5>Subject</h5>
+            </div>
+            <div class="schedule_wrapper">
+              <div class="item">
+                <p>204212</p>
+                <p class="center">08:00-11:00</p>
+                <p>29th January</p>
+              </div>
+              <div class="item">
+                <p>204271</p>
+                <p class="center">12:00-15:00</p>
+                <p>30th January</p>
+              </div>
+              <div class="item">
+                <p>001226</p>
+                <p class="center">15300-18:30</p>
+                <p>30th January</p>
+              </div>
+            </div>
+            
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+  <script></script>
 </body>
 </html>
