--- a/web/app/static/lab11_microblog.html
+++ b/web/app/static/lab11_microblog.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   
-  <link rel="stylesheet" href="static/css/mytwitter.css"> 
+  <link rel="stylesheet" href="static/css/mytwitter2.css"> 
   <link rel="stylesheet" href="static/css/open-iconic-bootstrap.css">
   <title>My Twitter</title>
 </head>
@@ -52,27 +52,27 @@
               </div>
             </div>
           </div>
-          <div class="tweet">
+          <div class="tweet" id="tweet">
             <div class="row">
               <div class="col-md-2 text-center">
                 <div class="col-md-2 text-center">
                   <img class="tw-user-medium rounded-circle" src="static/img/Profile2.png">
                 </div>  
               </div>
-              <div class="col-md-10">
-                <div class="row tweet-info">
+              <div class="col-md-10" id="datainfo">
+                <div class="row tweet-info" id="id">
                   <div class="col-md-auto">
-                    <span class="tweet-username">Moosu religion</span>
-                    <span class="tweet-usertag text-muted">@moosureli</span>-
-                    <span class="tweet-age text-muted">1d</span>
+                    <span class="tweet-username" id="name">${name}</span>
+                    <span class="tweet-usertag text-muted" id="email">${email}</span>-
+                    <span class="tweet-age text-muted" id="date_created">${date_created}</span>
                   </div>
                   <div class="col tweet-arrow text-muted">
                     <span class="oi oi-arrow-thick-bottom float-right"></span>
                   </div>
 
                 </div>
-                <div class="tweet-text"> 
-                  Moosu: Come join our religion!!!!!
+                <div class="tweet-text" id="message"> 
+                  ${message}
                 </div>
                 <div class="tweet-media">
                   <img class="img-fluid rounded" src="static/img/">
@@ -95,20 +95,20 @@
                   <img class="tw-user-medium rounded-circle" src="static/img/Profile2.png">
                 </div>  
               </div>
-              <div class="col-md-10">
-                <div class="row tweet-info">
+              <div class="col-md-10" id="datainfo">
+                <div class="row tweet-info" id="id">
                   <div class="col-md-auto">
-                    <span class="tweet-username">Moosu religion</span>
-                    <span class="tweet-usertag text-muted">@moosureli</span>-
-                    <span class="tweet-age text-muted">1hr</span>
+                    <span class="tweet-username" id="name">${name}</span>
+                    <span class="tweet-usertag text-muted" id="email">${email}</span>
+                    <span class="tweet-age text-muted" id="date_created">${date_created}</span>
                   </div>
                   <div class="col tweet-arrow text-muted">
                     <span class="oi oi-arrow-thick-bottom float-right"></span>
                   </div>
 
                 </div>
-                <div class="tweet-text"> 
-                  Moosu: So tried, Lab make me want some nap!!!
+                <div class="tweet-text" id="message"> 
+                  ${message}
                 </div>
                 <div class="tweet-media">
                   <img class="img-fluid rounded" src="static/img/Profile1.png">
@@ -141,6 +141,73 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"></script>
+  <script>
+    function populate_table(contact_data) {
+      $('#datainfo').bootstrapTable({
+        data: contact_data
+      });
+      $('#datainfo').bootstrapTable('hideColumn', 'id');
+    }
+
+    $(document).ready(function () {
+      (function () {
+        $.getJSON("lab11/BlogEntry", populate_table);
+      })();
+    });
+
+    // refresh the table after a read update
+    function refresh_table(contact_data) {
+      $('#datainfo').bootstrapTable('load', contact_data);
+    }
+
+    function tweet_table(contact_data){
+      const data = {tweet:contact_data};
+      const createTweetHTML = ({name, message, email, date}) => {
+        const post_time = time(date);
+        return <div class="tweet">
+            <div class="row">
+              <div class="col-md-2 text-center">
+                <div class="col-md-2 text-center">
+                  <img class="tw-user-medium rounded-circle" src="static/img/Profile2.png"></img>
+                </div>  
+              </div>
+              <div class="col-md-10" id="datainfo">
+                <div class="row tweet-info" id="id">
+                  <div class="col-md-auto">
+                    <span class="tweet-username" id="name">${name}</span>
+                    <span class="tweet-usertag text-muted" id="email">${email}</span>
+                    <span class="tweet-age text-muted" id="date_created">${date_created}</span>
+                  </div>
+                  <div class="col tweet-arrow text-muted">
+                    <span class="oi oi-arrow-thick-bottom float-right"></span>
+                  </div>
+
+                </div>
+                <div class="tweet-text" id="message"> 
+                  ${message}
+                </div>
+                <div class="tweet-media">
+                  <img class="img-fluid rounded" src="static/img/Profile1.png"></img>
+                </div>
+                <div class="row text-muted">
+                  <div class="col-md-2"><span class="oi oi-bullhorn"></span></div>
+                  <div class="col-md-2"><span class="oi oi-loop-circular"></span></div>
+                  <div class="col-md-2"><span class="oi oi-heart"></span></div>
+                  <div class="col-md-2"><span class="oi oi-envelope-open"></span></div>
+                </div>
+              </div>
+            </div>
+          </div>;
+      };
+
+      console.log(JSON.stringify(data));
+      const tweet = data.tweet.map(createTweetHTML);
+      tweet.forEach((tweet) => {
+        document.getElementById("tweet").innerHTML = tweet + document.getElementById("tweet").innerHTML;
+      });
+    }
+
+  </script>
 </body>
  
 </html>
