--- a/web/app/static/lab11_microblog.html
+++ b/web/app/static/lab11_microblog.html
@@ -7,9 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
+  
   <link rel="stylesheet" href="static/css/mytwitter2.css">
   <link rel="stylesheet" href="static/css/open-iconic-bootstrap.css">
   <title>My Twitter</title>
@@ -46,13 +47,13 @@
                 <img src="static/img/Profile2.png" class="tw-user-small rounded-circle mx-auto d-block">
               </div>
               <div class="col-md-9">
-                <form>
-                  <label for="firstname">ชื่อ</label>
-                  <input type="text" id="firstname" name="firstname" placeholder="Your name.." required>
-                  <label for="lastname">นามสกุล</label>
-                  <input type="text" id="lastname" name="lastname" placeholder="Your last name.." required>
-                  <label for="phone">โทรศัพท์</label>
-                  <input type="tel" id="phone" name="phone" placeholder="Your phone number.." required>
+                <form id="blog-table">
+                  <label for="name"></label>
+                  <input type="text" id="name" name="name" placeholder="Your name.." required>
+                  <label for="email"></label>
+                  <input type="text" id="email" name="email" placeholder="Your email.." required>
+                  <label for="message"></label>
+                  <input type="message" id="message" name="message" placeholder="What's in your mind.." required>
                   <input type="hidden" id="entryid" name="id" value="">
                   <input type="submit" name="submit" value="Submit">
                   <button id="clear_form" type="button">Clear</button>
@@ -140,17 +141,8 @@
     </div>
   </div>
   <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
-    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
-    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-    crossorigin="anonymous"></script>
   <script>
+
     function populate_table(blog_entries) {
       var blog = document.getElementById("blog1");
 
@@ -170,7 +162,7 @@
                   <div class="col-md-auto">
                     <span class="tweet-username" id="name">${element.name}</span>
                     <span class="tweet-usertag text-muted" id="email">${element.email}</span>-
-                    <span class="tweet-age text-muted" id="date_created">${elemnent.date_created}</span>
+                    <span class="tweet-age text-muted" id="date_created">${element.date_created}</span>
                   </div>
                   <div class="col tweet-arrow text-muted">
                     <span class="oi oi-arrow-thick-bottom float-right"></span>
@@ -181,7 +173,7 @@
                   ${element.message}
                 </div>
                 <div class="tweet-media">
-                  <img class="img-fluid rounded" src="static/img/">
+                  
                 </div>
                 <div class="row text-muted">
                    
@@ -197,16 +189,55 @@
         `;
         blog.appendChild(entry);
       });
-    }
 
-    $(document).ready(function () {
+      // console.log("error404");
+
+      $(document).ready(function () {
       (function () {
         $.getJSON("lab11/BlogEntry", populate_table);
       })();
+
+      });
+    }
+
+     // refresh the table after a read update
+    function refresh_table(blog_entries) {
+      $("#blog1").empty();
+      populate_table(blog_entries);
+    }
+
+    $("#blog-table").submit(function (event) {
+      // prevent default html form submission action
+      event.preventDefault();
+      // pack the inputs into a dictionary
+      var formData = {};
+      $(":input").each(function () {
+        var key = $(this).attr('name');
+        var val = $(this).val();
+
+
+        if (key != 'submit') {
+          formData[key] = val;
+        }
+      });
+
+
+      var $form = $(this);
+      var url = $form.attr("action");
+
+      $.post(url, formData, function (blog_entries) {
+        refresh_table(blog_entries);
+        clearForm();
+      });
+
+      //toggleView()
     });
 
-
-
+    function clearForm() {
+      $('#blog-table')[0].reset();
+      $('#entryid').val('');
+    }
+   
   </script>
 </body>
 
